--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <header>
         <h1>Junior Front End Developer Interview Questions</h1>
         <p>Questions asked to HackerYou students during job interviews</p>
-
+        <p><a href="http://hackeryou.com">HackerYou</a></p>
+        <p><a href="http://twitter.com/drewisthe">@drewisthe</a></p>
 
         <p class="view"><a href="https://github.com/drewminns">View My GitHub Profile</a></p>
 
