--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p><a href="http://hackeryou.com">HackerYou</a></p>
         <p><a href="http://twitter.com/drewisthe">@drewisthe</a></p>
 
-        <p class="view"><a href="https://github.com/drewminns">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/drewminns/drewminns.github.io">Pull Request this thing and add your own experience</a></p>
 
       </header>
       <section>
