--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
       <header>
         <h1>Junior Front End Developer Interview Questions</h1>
         <p>Questions asked to HackerYou students during job interviews</p>
-        <p><a href="http://hackeryou.com">HackerYou</a></p>
-        <p><a href="http://twitter.com/drewisthe">@drewisthe</a></p>
+        <p>For <a href="http://hackeryou.com">HackerYou</a> students by <a href="http://twitter.com/drewisthe">@drewisthe</a> </p>
 
         <p class="view"><a href="https://github.com/drewminns/drewminns.github.io">Pull Request this thing and add your own experience</a></p>
 
